--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 09 11:18:46 CAT 2023
-sdk.dir=C\:\\Users\\aaron\\AppData\\Local\\Android\\Sdk
+#Sat Jun 24 09:44:34 CAT 2023
+sdk.dir=C\:\\Users\\kryst\\AppData\\Local\\Android\\Sdk
