--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,6 @@
             android:name=".timesheetDetails"
             android:exported="false" />
         <activity
-            android:name=".testerdelete"
-            android:exported="false" />
-        <activity
             android:name=".Timesheets"
             android:exported="false" />
         <activity
@@ -73,6 +70,9 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+
+        <service android:name=".TimerService"/>
+
     </application>
 
 </manifest>
