--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.OPSC7311_POE_Group20"
         tools:targetApi="31">
         <activity
+            android:name=".badge"
+            android:exported="false" />
+        <activity
             android:name=".timesheetDetails"
             android:exported="false" />
         <activity
@@ -71,8 +74,7 @@
             android:name=".MainActivity"
             android:exported="true" />
 
-        <service android:name=".TimerService"/>
-
+        <service android:name=".TimerService" />
     </application>
 
 </manifest>
