--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.OPSC7311_POE_Group20"
         tools:targetApi="31">
         <activity
+            android:theme="@style/Theme.AppCompat.Dialog"
+            android:launchMode="singleInstance"
+            android:name=".snake"
+            android:exported="false" />
+        <activity
             android:name=".badge"
             android:exported="false" />
         <activity
