--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        //line graph
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "OPSC7311_POE_Group20"
